Setup the xaml and xaml.cs class to return plingplangplong based on the input

--- a/RaindropsApp/RaindropsWPF/RaindropsWPF.csproj
+++ b/RaindropsApp/RaindropsWPF/RaindropsWPF.csproj
@@ -6,4 +6,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Backgrounds\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RaindropsApp\RaindropFunctions.csproj" />
+  </ItemGroup>
+
 </Project>
