--- a/RaindropsApp/RaindropsWPF/RaindropsWPF.csproj
+++ b/RaindropsApp/RaindropsWPF/RaindropsWPF.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\RaindropsApp\RaindropFunctions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Resource Include="backgrounds\nice.jpg" />
+  </ItemGroup>
+
 </Project>
