Added unit tests to prime factorisation class

--- a/RaindropsApp/RaindropsWPF/Properties/launchSettings.json
+++ b/RaindropsApp/RaindropsWPF/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "RaindropsWPF": {
-      "commandName": "Project",
-      "workingDirectory": "C:\\Users\\gaffi\\source\\repos\\raindrops\\RaindropsApp\\RaindropsWPF"
+      "commandName": "Project"
     }
   }
 }
